2013-04-30  Anders Carlsson  <andersca@apple.com>

        String::isolatedCopy() can avoid a copy if the original is a temporary
        https://bugs.webkit.org/show_bug.cgi?id=115425

        Reviewed by Darin Adler.

        * wtf/Compiler.h:
        Add WTF_COMPILER_SUPPORTS_CXX_REFERENCE_QUALIFIED_FUNCTIONS define.

        * wtf/text/WTFString.cpp:
        (WTF::String::isolatedCopy):
        * wtf/text/WTFString.h:
        If COMPILER_SUPPORTS(CXX_REFERENCE_QUALIFIED_FUNCTIONS) is true, add two overloads of String::isolatedCopy().
        One is used if *this is an lvalue, and one is used if *this is an rvalue. In the latter case, we know that the original
        String object is a temporary and will be going away, so if it's safe to send it to another thread (if it's not an AtomicString,
        and if it's refcount is 1), then we can just steal the StringImpl from the original and avoid a copy altogether.

2013-04-30  Zalan Bujtas  <zalan@apple.com>

        Animations fail to start on http://www.google.com/insidesearch/howsearchworks/thestory/
        https://bugs.webkit.org/show_bug.cgi?id=111244

        Reviewed by David Kilzer.
        
        Enable performance.now() as a minimal subset of Web Timing API. 
        It returns DOMHighResTimeStamp, a monotonically increasing value representing the 
        number of milliseconds from the start of the navigation of the current document.
        JS libraries use this API to check against the requestAnimationFrame() timestamp.

        * wtf/FeatureDefines.h:

2013-04-29  Cosmin Truta  <ctruta@blackberry.com>

        [ARM] Expand the use of integer division
        https://bugs.webkit.org/show_bug.cgi?id=115138

        Reviewed by Benjamin Poulain.

        * wtf/Platform.h: Added ENABLE_ARM_INTEGER_DIV.

2013-04-29  Anders Carlsson  <andersca@apple.com>

        It should be an error to use adoptPtr with RefCounted subclasses
        https://bugs.webkit.org/show_bug.cgi?id=115389
